Update AR model to use Chair.glb and add ios-src

--- a/index.html
+++ b/index.html
@@ -69,18 +69,15 @@
 
   <!-- Composant AR -->
   <model-viewer
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    alt="Cadeau de Noël en réalité augmentée"
-    ar
-    ar-modes="scene-viewer quick-look webxr"
-    camera-controls
-    autoplay
-    auto-rotate
-    shadow-intensity="1"
-    exposure="1.1"
-    environment-image="neutral"
-  >
-  </model-viewer>
+  src="https://modelviewer.dev/shared-assets/models/ShopifyModels/Chair.glb"
+  ios-src="https://modelviewer.dev/shared-assets/models/ShopifyModels/Chair.usdz"
+  ar
+  ar-modes="scene-viewer quick-look webxr"
+  camera-controls
+  auto-rotate
+  shadow-intensity="1"
+></model-viewer>
+
 
   <div class="wrap">
     <h1>🎄 Joyeux Noël !</h1>
