--- a/index.html
+++ b/index.html
@@ -48,62 +48,40 @@
       margin-top: 0.5rem;
     }
 
-    model-viewer {
-      width: 100vw;
-      height: 100vh;
-    }
+   <model-viewer
+  id="gift"
+  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+  ar
+  ar-modes="scene-viewer quick-look webxr"
+  camera-controls
+  auto-rotate
+  environment-image="neutral">
+</model-viewer>
 
-    .badge {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      background: rgba(0,0,0,0.4);
-      border-radius: 999px;
-      padding: 4px 12px;
-      font-size: 0.75rem;
-      backdrop-filter: blur(6px);
-    }
-  </style>
-</head>
-<body>
+<button class="ar-button" slot="ar-button">
+  Voir en AR
+</button>
 
-  <!-- Le composant 3D -->
-  <model-viewer
-    id="gift"
-    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-    alt="Cadeau de Noël en réalité augmentée"
-    ar
-    ar-modes="scene-viewer quick-look webxr"
-    camera-controls
-    auto-rotate
-    shadow-intensity="1">
-  </model-viewer>
-
-  <!-- Gros bouton AR -->
-  <button id="arButton">🎄 MODE AR 🎁</button>
-
-  <style>
-    #arButton {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 20px 40px;
-      font-size: 1.5rem;
-      border: none;
-      border-radius: 12px;
-      background: #ff4757;
-      color: white;
-      font-weight: bold;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.3);
-      cursor: pointer;
-      z-index: 10;
-    }
-
-    #arButton:active {
-      transform: translateX(-50%) scale(0.95);
-    }
-  </style>
+<style>
+  .ar-button {
+    background: #ff4757;
+    color: white;
+    padding: 15px 25px;
+    border-radius: 10px;
+    font-size: 1.4rem;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.3);
+  }
+  .ar-button:active {
+    transform: translateX(-50%) scale(0.95);
+  }
+</style>
 
   <script>
     const modelViewer = document.querySelector("#gift");
