--- a/index.html
+++ b/index.html
@@ -13,82 +13,78 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: radial-gradient(circle at top, #182848, #0b1020);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      color: #fff;
+      background: #0b1020;
       overflow: hidden;
+      color: white;
+      font-family: sans-serif;
     }
 
-    .wrap {
+    model-viewer {
+      width: 100vw;
+      height: 100vh;
+    }
+
+    /* TITRE */
+    .title {
       position: fixed;
-      inset: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      top: 20px;
+      width: 100%;
       text-align: center;
-      padding: 16px;
-      box-sizing: border-box;
+      font-size: 2rem;
+      z-index: 5;
       pointer-events: none;
     }
 
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.3rem;
+    /* BOUTON AR OFFICIEL */
+    .ar-button {
+      background-color: #ff4757;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      font-family: inherit;
+      font-size: 1.4rem;
+      padding: 15px 25px;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      cursor: pointer;
     }
 
-    p {
-      margin-top: 0;
-      opacity: 0.85;
+    .ar-button:active {
+      transform: translateX(-50%) scale(0.95);
     }
 
-    .hint {
-      font-size: 0.9rem;
-      opacity: 0.75;
-      margin-top: 0.5rem;
+    .ar-button[disabled] {
+      background-color: #888;
+      cursor: not-allowed;
     }
+  </style>
+</head>
 
-   <model-viewer
-  id="gift"
-  src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
-  ar
-  ar-modes="scene-viewer quick-look webxr"
-  camera-controls
-  auto-rotate
-  environment-image="neutral">
-</model-viewer>
+<body>
 
-<button class="ar-button" slot="ar-button">
-  Voir en AR
-</button>
+  <div class="title">🎄 Joyeux Noël ! 🎁</div>
 
-<style>
-  .ar-button {
-    background: #ff4757;
-    color: white;
-    padding: 15px 25px;
-    border-radius: 10px;
-    font-size: 1.4rem;
-    border: none;
-    cursor: pointer;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 10;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.3);
-  }
-  .ar-button:active {
-    transform: translateX(-50%) scale(0.95);
-  }
-</style>
+  <!-- Composant 3D -->
+  <model-viewer id="gift"
+    src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
+    alt="Modèle 3D"
+    ar
+    ar-modes="scene-viewer quick-look webxr"
+    camera-controls
+    auto-rotate
+    shadow-intensity="1"
+    environment-image="neutral">
 
-  <script>
-    const modelViewer = document.querySelector("#gift");
-    document.querySelector("#arButton").addEventListener("click", () => {
-      modelViewer.enterAR();
-    });
-  </script>
+    <!-- Bouton AR natif -->
+    <button slot="ar-button" class="ar-button">
+      Voir en AR
+    </button>
+
+  </model-viewer>
 
 </body>
 </html>
