Update 3D model source in index.html

--- a/index.html
+++ b/index.html
@@ -70,20 +70,23 @@
 
   <!-- Composant 3D -->
   <model-viewer id="gift"
-  src="https://cdn.jsdelivr.net/gh/ChaptGPTAssets/giftbox/simple-gift.glb"
-  ios-src="https://cdn.jsdelivr.net/gh/ChaptGPTAssets/giftbox/simple-gift.usdz"
+  src="gift_box_3d_model_free_download.glb"
+  ios-src="gift_box_3d_model_free_download.usdz"
   alt="Cadeau de Noël"
   ar
   ar-modes="scene-viewer quick-look webxr"
   camera-controls
   auto-rotate
   shadow-intensity="1"
+  scale="0.3 0.3 0.3"
   environment-image="neutral">
-  
+
   <button slot="ar-button" class="ar-button">
     Voir en AR 🎁
   </button>
+
 </model-viewer>
+
 
 
 </body>
