Update 3D model source and scale in index.html

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 
   <!-- Composant 3D -->
   <model-viewer id="gift"
-  src="gift_box_3d_model_free_download.glb"
-  ios-src="gift_box_3d_model_free_download.usdz"
+  src="GIFTCORRECTED.glb"
+  ios-src="CorrectGift.usdc"
   alt="Cadeau de Noël"
   ar
   ar-modes="scene-viewer quick-look webxr"
   camera-controls
   auto-rotate
   shadow-intensity="1"
-  scale="0.3 0.3 0.3"
+  scale="0.4 0.4 0.4"
   environment-image="neutral">
 
   <button slot="ar-button" class="ar-button">
@@ -86,6 +86,7 @@
   </button>
 
 </model-viewer>
+
 
 
 
