Update 3D model source and scale in index.html

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 
   <!-- Composant 3D -->
   <model-viewer id="gift"
-  src="GIFTCORRECTED.glb"
-  ios-src="CorrectGift.usdc"
+  src="theTrueGift1.glb"
+  ios-src="theTrueGift.usdc"
   alt="Cadeau de Noël"
   ar
   ar-modes="scene-viewer quick-look webxr"
   camera-controls
   auto-rotate
   shadow-intensity="1"
-  scale="0.001 0.001 0.001"
+  scale="1 1 1"
   environment-image="neutral">
 
   <button slot="ar-button" class="ar-button">
@@ -86,6 +86,7 @@
   </button>
 
 </model-viewer>
+
 
 
 
