Update 3D model source in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <!-- Composant 3D -->
   <model-viewer id="gift"
-  src="theTrueGift1.glb"
+  src="theTrueGift.glb"
   ios-src="theTrueGift.usdc"
   alt="Cadeau de Noël"
   ar
