--- a/index.html
+++ b/index.html
@@ -14,75 +14,72 @@
       padding: 0;
       height: 100%;
       background: #0b1020;
+      overflow: hidden;
       color: white;
       font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;   /* Centrer verticalement */
-      align-items: center;       /* Centrer horizontalement */
-      text-align: center;
-      overflow: hidden;
     }
 
-    h1 {
-      margin-bottom: 20px;
-      font-size: 2rem;
-    }
-
-    .subtitle {
-      font-size: 1rem;
-      opacity: 0.8;
-      margin-bottom: 40px;
-      padding: 0 20px;
-    }
-
-    /* MODEL-VIEWER INVISIBLE */
+    /* Le model-viewer occupe tout l'écran (pour que le bouton puisse exister) */
     model-viewer {
-      width: 0;
-      height: 0;
-      opacity: 0;
-      pointer-events: none;
-      position: absolute;
-      left: -9999px;
+      width: 100vw;
+      height: 100vh;
+      display: block;
     }
 
-    /* BOUTON AR RESPONSIVE */
+    /* Voile qui masque complètement la 3D */
+    .cover {
+      position: fixed;
+      inset: 0;
+      background: #0b1020;
+      z-index: 5;
+      pointer-events: none; /* laisse passer les clics vers le bouton AR */
+    }
+
+    /* TITRE */
+    .title {
+      position: fixed;
+      top: 30px;
+      width: 100%;
+      text-align: center;
+      font-size: 2rem;
+      z-index: 10;
+      pointer-events: none;
+    }
+
+    /* BOUTON AR OFFICIEL */
     .ar-button {
       background-color: #ff4757;
       border: none;
-      border-radius: 12px;
+      border-radius: 10px;
       color: white;
+      font-family: inherit;
       font-size: 1.4rem;
-      padding: 15px 30px;
-      cursor: pointer;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      padding: 15px 25px;
+      position: fixed;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
       z-index: 10;
-      transition: 0.15s;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+      cursor: pointer;
     }
 
     .ar-button:active {
-      transform: scale(0.95);
+      transform: translateX(-50%) scale(0.95);
     }
 
-    /* Ajustement automatique pour petits téléphones */
-    @media (max-height: 600px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-      .ar-button {
-        font-size: 1.1rem;
-        padding: 12px 22px;
-      }
+    .ar-button[disabled] {
+      background-color: #888;
+      cursor: not-allowed;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>🎄 Joyeux Noël ! 🎁</h1>
-  <div class="subtitle">Clique pour voir apparaître ton cadeau en réalité augmentée ✨</div>
+  <div class="title">🎄 Joyeux Noël ! 🎁</div>
 
-  <!-- MODEL-VIEWER INVISIBLE (AR ONLY) -->
+  <!-- Composant 3D (toujours là, mais caché par la cover) -->
   <model-viewer id="gift"
     src="theTrueGift.glb"
     ios-src="theTrueGift.usdc"
@@ -90,6 +87,7 @@
     ar
     ar-modes="scene-viewer quick-look webxr"
     camera-controls
+    auto-rotate
     shadow-intensity="1"
     environment-image="neutral"
     model-scale="0.02">
@@ -99,6 +97,9 @@
     </button>
 
   </model-viewer>
+
+  <!-- Voile qui masque l'aperçu 3D mais laisse le bouton visible -->
+  <div class="cover"></div>
 
 </body>
 </html>
