Update holiday greeting and button text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <body>
 
-  <h1>🎄 Joyeux Noël ! 🎁</h1>
+  <h1>🎄 Joyeux Noël ! 🎄</h1>
 
   <!-- Model viewer caché -->
   <model-viewer id="mv"
@@ -75,7 +75,7 @@
   </model-viewer>
 
   <!-- Bouton AR indépendant -->
-  <button id="startAR">Voir en AR 🎁</button>
+  <button id="startAR">🎁 Récupérer son cadeau 🎁</button>
 
   <!-- Script d'activation AR -->
   <script>
