--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: #0b1020;
+      background: url("château") no-repeat center center fixed;
+      background-size: cover;
       color: white;
       font-family: sans-serif;
       display: flex;
