Modify button and h1 bottom positioning
Adjusted the bottom position of the button and h1 element.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     h1 {
       font-size: 2rem;
       margin-bottom: 20px;
+      bottom: 520;
     }
 
     /* model-viewer invisible mais fonctionnel */
@@ -54,7 +55,7 @@
 
   /* Positionnement */
   position: fixed;
-  bottom: 220px;        /* ⬅️ remonte le bouton */
+  bottom: 420px;        /* ⬅️ remonte le bouton */
   left: 50%;
   transform: translateX(-50%);
 }
