Fix position of h1 and adjust button positioning

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     }
 
     h1 {
+      position: fixed;
       font-size: 2rem;
       margin-bottom: 20px;
       bottom: 520;
@@ -57,7 +58,6 @@
   position: fixed;
   bottom: 420px;        /* ⬅️ remonte le bouton */
   left: 50%;
-  transform: translateX(-50%);
 }
 
     #startAR:active {
