--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
     }
 
     h1 {
-      position: fixed;
       font-size: 2rem;
-      margin-bottom: 20px;
-      bottom: 520;
+      margin-top: -20px;
     }
 
     /* model-viewer invisible mais fonctionnel */
@@ -58,6 +56,7 @@
   position: fixed;
   bottom: 420px;        /* ⬅️ remonte le bouton */
   left: 50%;
+  transform: translateX(-50%);
 }
 
     #startAR:active {
