--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: url("château.jpg") no-repeat center center fixed;
+      background: url("tour refous.png") no-repeat center center fixed;
       background-size: cover;
       color: white;
       font-family: sans-serif;
@@ -54,7 +54,7 @@
 
   /* Positionnement */
   position: fixed;
-  bottom: 420px;        /* ⬅️ remonte le bouton */
+  bottom: 400px;        /* ⬅️ remonte le bouton */
   left: 50%;
   transform: translateX(-50%);
 }
