Change background image from 'tour refous.png' to 'château.png'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background: url("tour refous.png") no-repeat center center fixed;
+      background: url("château.png") no-repeat center center fixed;
       background-size: cover;
       color: white;
       font-family: sans-serif;
