--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       height: 100%;
       background: url("château.png") no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      color: black;
       font-family: sans-serif;
       display: flex;
       flex-direction: column;
@@ -65,7 +65,7 @@
       transition: 0.15s;
 
       position: fixed;
-      bottom: 400px; /* remonte le bouton */
+      bottom: 100px; /* remonte le bouton */
       left: 50%;
       transform: translateX(-50%);
     }
