Remove title from index.html and adjust button position

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Joyeux Noël</title>
+  <title> </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- model-viewer -->
@@ -65,7 +65,7 @@
       transition: 0.15s;
 
       position: fixed;
-      bottom: 100px; /* remonte le bouton */
+      bottom: 50px; /* remonte le bouton */
       left: 50%;
       transform: translateX(-50%);
     }
