Update title to 'Voeux' in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title> </title>
+  <title> Voeux </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- model-viewer -->
@@ -80,8 +80,6 @@
 
   <!-- NEIGE EN OVERLAY -->
   <div id="snowOverlay"></div>
-
-  <h1>🎄 Joyeux Noël ! 🎄</h1>
 
   <!-- Model viewer caché -->
   <model-viewer id="mv"
