--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     /* Bouton AR externe */
     #startAR {
-      background-color: #ff4757;
+      background-color: Gray;
       border: none;
       border-radius: 12px;
       color: white;
